[package]
name = "plateau-view-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
fs_extra = "1.3.0"
rayon = "1.8.0"
regex = "1.10.2"
sevenz-rust= { version = "0.5.0", features = ["compress"] }
tempdir = "0.3.7"
thiserror = "1.0.50"
walkdir = "2.4.0"
zip = "0.6.6"
